<?xml version="1.0"?>
<package>
  <name>rtabmap_ros</name>
  <version>0.17.0</version>
  <description>RTAB-Map's ros-pkg. RTAB-Map is a RGB-D SLAM approach with real-time constraints.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rtabmap</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>compressed_depth_image_transport</run_depend>
  <run_depend>compressed_image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>rtabmap</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>image_geometry</run_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <export>
	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	<rviz plugin="${prefix}/plugin_description.xml"/>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
