<?xml version="1.0"?>
<package format="2">
  <name>rtabmap_ros</name>
  <version>0.20.18</version>
  <description>RTAB-Map's ros-pkg. RTAB-Map is a RGB-D SLAM approach with real-time constraints.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/introlab/rtabmap_ros/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>apriltag_ros</depend>
  <depend>class_loader</depend>
  <depend>costmap_2d</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>find_object_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>octomap_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>rtabmap</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
